objects/copadoQuality__Functional_Review_Session__c.object
<CustomObject>
    <fields>
        <fullName>copadoQuality__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Functional_Review_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Functional Review Sessions</relationshipLabel>
        <relationshipName>Functional_Review_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Exploration_URL__c</fullName>
        <label>Exploration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copadoQuality__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadoQuality__Functional_Review__c</fullName>
        <label>Functional Review</label>
        <referenceTo>copadoQuality__Functional_Review__c</referenceTo>
        <relationshipLabel>Functional Review Sessions</relationshipLabel>
        <relationshipName>Functional_Review_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Environment__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+copadoQuality__Functional_Review__r.copadoQuality__Review_Environment__c,  copadoQuality__Functional_Review__r.copadoQuality__Review_Environment__r.Name , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Outcome__c</fullName>
        <label>Review Outcome</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Regression Review</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoQuality__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Functional Review Sessions</relationshipLabel>
        <relationshipName>Functional_Review_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Functional Review Session</label>
    <nameField>
        <displayFormat>FRS-{0000000000}</displayFormat>
        <label>Functional Review Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functional Review Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>